[project]
name = "oauth-testing-tools"
version = "0.1.0"
description = "OAuth Testing Tools CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "httpx>=0.28.1",
    "rich>=14.1.0",
]

[project.scripts]
oauth-dcr = "oauth_dcr.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oauth_dcr"]
